[gd_scene load_steps=9 format=2]

[ext_resource path="res://Shared/blueprints.svg" type="Texture" id=1]
[ext_resource path="res://Shared/Theme/Panel/inventory_panel_style.tres" type="StyleBox" id=2]
[ext_resource path="res://GUI/Crafting/CraftingRecipeItem.gd" type="Script" id=3]
[ext_resource path="res://Shared/Theme/Panel/inventory_panel_light_style.tres" type="StyleBox" id=4]
[ext_resource path="res://Shared/Theme/Panel/inventory_panel_bright_style.tres" type="StyleBox" id=5]
[ext_resource path="res://Shared/Theme/builder_theme.tres" type="Theme" id=6]
[ext_resource path="res://GUI/Crafting/RecipeName.gd" type="Script" id=7]
[ext_resource path="res://GUI/GUISprite.gd" type="Script" id=8]

[node name="CraftingRecipe" type="PanelContainer"]
margin_right = 120.0
margin_bottom = 51.0
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
regular_style = ExtResource( 2 )
highlight_style = ExtResource( 4 )
bright_style = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 120.0
margin_bottom = 51.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 115.0
margin_bottom = 46.0

[node name="GUISprite" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 41.0
rect_min_size = Vector2( 51, 41 )
mouse_filter = 2
script = ExtResource( 8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 339, 119, 102, 82 )
scale = Vector2( 0.5, 0.5 )

[node name="RecipeName" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 55.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 31.0
text = "Battery"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_CraftingRecipe_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CraftingRecipe_mouse_exited"]
